Add PostalCode to Store
