# v1/doc/swagger.json
@@ -336,6 +336,41 @@
                 }
             }
         },
+        "/Store/PostalCode/{id}": {
+            "parameters": [
+                {
+                    "name": "id",
+                    "in": "path",
+                    "type": "string",
+                    "required": true,
+                    "description": "Unique customer identifier to be used for experience customization."
+                }
+            ],
+            "get": {
+                "summary": "Get Store by postalCode",
+                "description": "Return a list of Stores by postalCode.",
+                "tags": [
+                    "Stores"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "An array of Stores found",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Store"
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "Unexpected error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
         "/Product": {
             "parameters": [
                 {
@@ -2046,6 +2081,10 @@
                     "type": "string",
                     "description": "Address"
                 },
+                "postalCode": {
+                    "type": "string",
+                    "description": "Postal code"
+                },
                 "postDate": {
                     "type": "string",
                     "format": "date-time",
@@ -2085,6 +2124,10 @@
                 "detail": {
                     "type": "string",
                     "description": "Detail"
+                },
+                "unit": {
+                    "type": "string",
+                    "description": "Unit"
                 },
                 "postDate": {
                     "type": "string",
@@ -2161,6 +2204,11 @@
                 "idStore": {
                     "type": "string",
                     "description": "Store"
+                },
+                "price": {
+                    "type": "number",
+                    "format": "double",
+                    "description": "Price"
                 },
                 "postDate": {
                     "type": "string",
