# v1/models/store.js
@@ -28,7 +28,7 @@ exports.getAll = function (req, res, next) {
 exports.post = function (req, res, next) {
 	
 	pg.connect(process.env.DATABASE_URL, function(err, client, done) {
-		client.query('insert into store (id, name, pictureUrl, address, postDate, putDate, deleteDate) values ($1,$2,$3,$4,now(),null,null) RETURNING _id, id, name, pictureUrl, address, postDate, putDate, deleteDate',[req.body.id,req.body.name,req.body.pictureUrl,req.body.address], function(err, result) {
+		client.query('insert into store (id, name, pictureUrl, address, postalCode, postDate, putDate, deleteDate) values ($1,$2,$3,$4,$5,now(),null,null) RETURNING _id, id, name, pictureUrl, address, postalCode, postDate, putDate, deleteDate',[req.body.id,req.body.name,req.body.pictureUrl,req.body.address,req.body.postalCode], function(err, result) {
 			done();
 			if (err) {
 				console.error(err);
@@ -98,7 +98,7 @@ exports.put = function (req, res, next) {
 				response.send("Error " + err);
 			}else{
 				var userFound = result.rows;
-				client.query('update store set name=$2, pictureUrl=$3, address=$4, postDate = coalesce(postDate,now()), putDate = now(), deleteDate = deleteDate where id = $1',[req.body.id,req.body.name,req.body.pictureUrl,req.body.address], function(err, result) {
+				client.query('update store set name=$2, pictureUrl=$3, address=$4, postalCode=$5, postDate = coalesce(postDate,now()), putDate = now(), deleteDate = deleteDate where id = $1',[req.body.id,req.body.name,req.body.pictureUrl,req.body.address,req.body.postalCode], function(err, result) {
 					done();
 					if (err) {
 						console.error(err);
@@ -112,6 +112,24 @@ exports.put = function (req, res, next) {
 						res.end();
 					}
 				});
+			}
+		});
+	});
+};
+
+exports.getByPostalCode = function (req, res, next) {
+	
+	pg.connect(process.env.DATABASE_URL, function(err, client, done) {
+		client.query('SELECT * FROM store where postalCode = $1',[req.params.id], function(err, result) {
+			done();
+			if (err) {
+				console.error(err);
+				response.send("Error " + err);
+			}else{
+				res.writeHead(200, { 'Content-Type': 'application/json' });
+				console.log( result.rows );
+				res.write(JSON.stringify(result.rows));
+				res.end();
 			}
 		});
 	});
